# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
#

2005-03-18 08:54:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-55

    Summary:
      catalog, improve docstrings, coding style corrections
    Revision:
      itools--main--0.7--patch-55


    modified files:
     Changelog catalog/IIndex.py catalog/prof.py


2005-03-17 19:53:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-54

    Summary:
      catalog, optimize the text analyser
    Revision:
      itools--main--0.7--patch-54


    modified files:
     Changelog catalog/Analysers.py


2005-03-17 19:31:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-53

    Summary:
      catalog, optimize indexing, reduce write access to the resource
    Revision:
      itools--main--0.7--patch-53


    modified files:
     Changelog catalog/IIndex.py


2005-03-16 18:06:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-52

    Summary:
      catalog, lazy load the indexes
    Revision:
      itools--main--0.7--patch-52

    Now the data from the indexes is loaded as late as possible (lazy).

    modified files:
     Changelog catalog/IIndex.py


2005-03-16 14:44:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-51

    Summary:
      catalog, optimize index load
    Revision:
      itools--main--0.7--patch-51

    Index loading has been optimized again. Now we read the full "tree"
    resource data into memory, instead of accessing the resource for
    every slot.

    modified files:
     Changelog catalog/IIndex.py


2005-03-16 14:37:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-50

    Summary:
      catalog, optimize index load
    Revision:
      itools--main--0.7--patch-50

    Now the loading an index is faster. Indexes are stored in two
    resources, "tree" and "documents". Before both were loaded at
    the first access, now only the first one. Documents are loaded
    when needed (lazy load).

    modified files: